Minor edits to change behaviour of modal next button
Next button is now disabled until user has selected one of the inputs by checking at least one box.
Readme file written.

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
               </div>
               </div>
               <div class="modal-footer">
-                <button type="button" class="btn btn-primary btn-sm" data-dismiss="modal">Next</button>
+                <button type="button" class="btn btn-primary btn-sm" data-dismiss="modal" id="nextbtn">Next</button>
               </div>
             </div>
           </div>
